<?xml version="1.0" encoding="utf-8"?>

<!--
#   Android Weather Notification.
#   Copyright (C) 2010  Denis Nelubin aka Gelin
#   
#   This program is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 2 of the License, or
#   (at your option) any later version.
#   
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#   
#   You should have received a copy of the GNU General Public License
#   along with this program; if not, write to the Free Software
#   Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
#   
#   http://gelin.ru
#   mailto:den@gelin.ru
-->

<resources>
    <string name="app_name">Weather notification</string>
    <string name="weather">Weather</string>
    <string name="notification">Notification</string>
    <string name="enable_notification">Enable notification</string>
    <string name="refresh_interval">Refresh interval</string>
    <string name="refresh_15m">Every fifteen minutes</string>
    <string name="refresh_30m">Every thirty minutes</string>
    <string name="refresh_1h">Every hour</string>
    <string name="refresh_2h">Every two hours</string>
    <string name="refresh_3h">Every three hours</string>
    <string name="refresh_4h">Every four hours</string>
    <string name="refresh_6h">Every six hours</string>
    <string name="refresh_12h">Every twelve hours</string>
    <string name="refresh_1d">Every day</string>
    <string name="location">Location</string>
    <string name="auto_location">Auto detect</string>
    <string name="auto_location_summary_on">Automatically detect the current location</string>
    <string name="auto_location_summary_off">Define the weather location manually</string>
    <string name="manual_location">Weather location</string>
    <string name="weather_update_empty">Weather for \"%s\" is unknown</string>
    <string name="weather_update_failed">Weather update failed: %s</string>
    <string name="weather_update_no_network">Weather update failed: no network connections</string>
    <string name="weather_update_unknown_location">Weather update failed: location is unknown</string>
    <string name="skin">Skin</string>
    <string name="skins">Skins</string>
    <string name="skins_preferences">Skins preferences</string>
    <string name="skins_install">Install skins</string>
    <string name="skins_install_notice">You SHOULD INSTALL SKINS for better usability. Please click on \"Install skins\" on the bottom of this screen.</string>
    <string name="skins_install_notice_no_market">You SHOULD INSTALL SKINS for better usability. Search \"Weather Notification Skin\" applications in Android Market and install them.</string>
    <string name="builtin_skin">Built-in skin</string>
    <string name="builtin_skin_preferences">Built-in skin preferences</string>
    <string name="start_update_service_permission">start weather update service</string>
    <string name="start_update_service_permission_description">Allows the application to start weather update service to receive the new weather values.</string>
    <string name="switch_on">\u2713</string>
    <string name="switch_off">\u25CB</string>
    
    <string name="condition_thunderstorm_rain_light">Thunderstorm with light rain</string>
    <string name="condition_thunderstorm_rain">Thunderstorm with rain</string>
    <string name="condition_thunderstorm_rain_heavy">Thunderstorm with heavy rain</string>
    <string name="condition_thunderstorm_light">Light thunderstorm</string>
    <string name="condition_thunderstorm">Thunderstorm</string>
    <string name="condition_thunderstorm_heavy">Heavy thunderstorm</string>
    <string name="condition_thunderstorm_ragged">Ragged thunderstorm</string>
    <string name="condition_thunderstorm_drizzle_light">Thunderstorm with light drizzle</string>
    <string name="condition_thunderstorm_drizzle">Thunderstorm with drizzle</string>
    <string name="condition_thunderstorm_drizzle_heavy">Thunderstorm with heavy drizzle</string>

    <string name="condition_drizzle_light">Light drizzle</string>
    <string name="condition_drizzle">Drizzle</string>
    <string name="condition_drizzle_heavy">Heavy drizzle</string>
    <string name="condition_drizzle_rain_light">Light drizzle rain</string>
    <string name="condition_drizzle_rain">Drizzle rain</string>
    <string name="condition_drizzle_rain_heavy">Heavy drizzle rain</string>
    <string name="condition_drizzle_shower">Shower drizzle</string>

    <string name="condition_rain_light">Light rain</string>
    <string name="condition_rain">Rain</string>
    <string name="condition_rain_heavy">Heavy rain</string>
    <string name="condition_rain_very_heavy">Very heavy rain</string>
    <string name="condition_rain_extreme">Extreme rain</string>
    <string name="condition_rain_freezing">Freezing rain</string>
    <string name="condition_rain_shower_light">Light shower rain</string>
    <string name="condition_rain_shower">Shower rain</string>
    <string name="condition_rain_shower_heavy">Heavy shower rain</string>

    <string name="condition_snow_light">Light snow</string>
    <string name="condition_snow">Snow</string>
    <string name="condition_snow_heavy">Heavy snow</string>
    <string name="condition_sleet">Sleet</string>
    <string name="condition_snow_shower">Shower snow</string>

    <string name="condition_mist">Mist</string>
    <string name="condition_smoke">Smoke</string>
    <string name="condition_haze">Haze</string>
    <string name="condition_sand_whirls">Sand/Dust whirls</string>
    <string name="condition_fog">Fog</string>

    <string name="condition_clouds_clear">Sky is clear</string>
    <string name="condition_clouds_few">Few clouds</string>
    <string name="condition_clouds_scattered">Scattered clouds</string>
    <string name="condition_clouds_broken">Broken clouds</string>
    <string name="condition_clouds_overcast">Overcast clouds</string>

    <string name="condition_tornado">Tornado</string>
    <string name="condition_tropical_storm">Tropical storm</string>
    <string name="condition_hurricane">Hurricane</string>
    <string name="condition_cold">Cold</string>
    <string name="condition_hot">Hot</string>
    <string name="condition_windy">Windy</string>
    <string name="condition_hail">Hail</string>
</resources>
